<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/ordersToolbar"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/voiceSwitch"
            android:theme="@style/SwitchCompatTheme"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:thumb="@drawable/ic_voice"
            android:track="@drawable/track"/>
        <TextView
            android:id="@+id/txtVoiceActive"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Listening..."/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grpOrderNumber"
        android:orientation="vertical"
        android:layout_below="@+id/ordersToolbar"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tvOrderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activityHeader"
                android:text="Track Order" />
        </LinearLayout>

        <EditText
            android:id="@+id/etOrderNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="128dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/calendar_text_small"
            android:backgroundTint="#26858c"
            android:textSize="25sp"
            android:hint="Order Number"
            android:maxLength="12"/>

        <TextView
            android:id="@+id/tvOrderNumberError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/btnTrackOrder"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="Track"
            android:background="@drawable/button_shape"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>


    <View
        android:id="@+id/dividerResult"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="#000000"
        android:padding="15dp"/>

    <LinearLayout
        android:id="@+id/grpTrackOrderResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grpOrderNumber"
        android:layout_margin="30dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Results"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@android:color/holo_red_dark"/>

    </LinearLayout>

</RelativeLayout>